<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ir.behmerd.weightcontrol.MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" android:visible="false" />
    <item android:id="@+id/action_new" android:title="@string/action_new"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_save" android:title="@string/action_save"
        android:orderInCategory="100" app:showAsAction="never" android:enabled="false" />
    <item android:id="@+id/action_manage_data" android:title="@string/action_manage_data"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
