<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ir.behmerd.weightcontrol.StatusActivity">
    <item android:id="@+id/sa_action_edit" android:title="@string/action_edit"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sa_action_delete" android:title="@string/action_delete"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sa_action_save" android:title="@string/action_save"
        android:orderInCategory="100" app:showAsAction="never" android:enabled="false" />
    <item android:id="@+id/sa_action_cancel" android:title="@string/action_cancel"
        android:orderInCategory="100" app:showAsAction="never" android:enabled="false" />
</menu>
