<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ir.behmerd.weightcontrol.AddStatusActivity"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:id="@+id/save_master"
    android:gravity="center_vertical|center|center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/save_scroller_layout"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_content_holder">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/save_check_date"
                android:layout_gravity="center_horizontal"
                android:text="@string/save_check_date_caption"
                android:gravity="right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_analyze_height_caption"
                android:id="@+id/save_height"
                android:layout_gravity="right"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_analyze_weight_caption"
                android:id="@+id/save_weight"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:gravity="right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/main_analyze_bmi_caption"
                android:id="@+id/save_bmi"
                android:layout_gravity="right"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/save_difference_caption"
                android:id="@+id/save_difference"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:gravity="right" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/save_activity_caption"
                android:id="@+id/save_activities"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:gravity="right" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/save_activity_edit"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/main_form_rounded"
                android:gravity="right" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/save_insert_button"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/main_button_rounded"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:text="@string/special_character_ok" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
